[tool.poetry]
name = "Junesskim"
version = "0.1.0"
description = ""
authors = ["Junesskim <aktpfkxl9891@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
